:bug: :lipstick: Fix profile pic on about me page not centered

--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -4,5 +4,8 @@ img
   max-height: 100%
   object-fit: scale-down
 
+.avatar
+  text-align: center
+
 @import "figures"
 @import "projects"
